[package]
name = "rt-evm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
beef = "0.5"
tokio = { version = "1.26", features = ["full"] }
jsonrpsee = { version = "0.15", features = ["http-server", "macros", "ws-server"] }

ruc = "4.1"
once_cell = "1.17.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rt-evm-model = { path = "../model" }
rt-evm-executor = { path = "../executor" }
rt-evm-mempool = { path = "../mempool" }
rt-evm-storage = { path = "../storage" }

[dev-dependencies]
fastrand = "1.8"
json = "0.12"

[features]
default = []

benchmark = []
