[package]
edition = "2021"
name = "rt-evm-executor"
version = "0.1.0"

[dependencies]
ruc = { workspace = true }
rlp = { workspace = true }
evm = { workspace = true }

# deps of precompiles
az = { workspace = true }
bn = { workspace = true }
rug = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }

rt-evm-model = { workspace = true }
rt-evm-crypto = { workspace = true }
rt-evm-storage = { workspace = true }

rand = { workspace = true, optional = true }
ed25519-zebra = { workspace = true, optional = true }
bcs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
vsdb_trie_map = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
benchmark = []

poa = ["pos", "rand", "ed25519-zebra"]
pos = ["bcs", "serde", "vsdb_trie_map"]

bcs_codec = ["pos", "vsdb_trie_map/bcs_codec"]
json_codec = ["pos", "vsdb_trie_map/json_codec"]
msgpack_codec = ["pos", "vsdb_trie_map/msgpack_codec"]
