[package]
name = "rt-evm-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
ruc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }

rt-evm-model = { workspace = true }
rt-evm-storage = { workspace = true }
rt-evm-config = { workspace = true }

[features]
default = []
benchmark = []
