[package]
name = "rt-evm-model"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6"
async-trait = "0.1"
bcs = "0.1.5"
bytes = { version = "1.4", features = ["serde"] }
derive_more = "0.99"
ethereum = { version = "0.14", features = ["with-codec", "with-serde"] }
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
evm = { version = "0.37", features = ["with-serde"] }
faster-hex = "0.6"
ophelia = "0.3"
ophelia-secp256k1 = "0.3"
rlp = "0.5"
rlp-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17.1"

ruc = "4.0.1"
tiny-keccak = "2.0.2"

rt-evm-crypto = { path = "../utils/crypto" }

[dev-dependencies]
