[package]
edition = "2021"
name = "rt-evm-storage"
version = "0.1.0"

[dependencies]
ruc = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

moka = { workspace = true }
serde = { workspace = true }
bcs = { workspace = true }

vsdb = { workspace = true }
vsdb_trie_db = { workspace = true }

rt-evm-model = { workspace = true }

[dev-dependencies]

[features]
default = []
benchmark = []
